--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,7 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-   c     {
+        {
             "name": "Launch",
             "type": "go",
             "request": "launch",
@@ -13,7 +12,7 @@
             "remotePath": "",
             "port": 2345,
             "host": "127.0.0.1",
-            "program": "${fileDirname}",
+            "program": "${workspaceRoot}/main.go",
             "env": {},
             "args": [],
             "showLog": true
