修改结构框架，对数据处理进行了优化，区分不同协议的设备，添加了MODBUS设备的定义

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,3 +3,10 @@ httpport = 8080
 runmode = dev
 TemplateLeft = "[["
 TemplateRight = "]]"
+
+mysqluser = "root" 
+mysqlpass = "zhd1021" 
+mysqlurls = "127.0.0.1:3306"
+mysqldb = "maingo"
+
+maingetvalueurls = "http://211.149.159.27:5021/html5/GETTAGVAL/"
